[tool.poetry]
name = "arpeggio-py"
version = "1.0.0"
description = "Coding template for Clean Architecture, CQRS and DDD based projects"
authors = ["Isaac Herrera"]
packages = [{ include = "core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
